navbar, footer changed

--- a/services.html
+++ b/services.html
@@ -24,18 +24,7 @@
 </head>
 
 <body>
-    <!-- Preloader Start -->
-    <div id="preloader-active">
-        <div class="preloader d-flex align-items-center justify-content-center">
-            <div class="preloader-inner position-relative">
-                <div class="preloader-circle"></div>
-                <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/logo.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Preloader Start -->
+
     <header>
         <!--? Header Start -->
         <div class="header-area header-transparent">
@@ -43,13 +32,8 @@
                 <div class="container-fluid">
                     <div class="row align-items-center">
                         <!-- Logo -->
-                        <div class="col-xl-2 col-lg-2 col-md-1">
-                            <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-xl-10 col-lg-10 col-md-10">
-                            <div class="menu-main d-flex align-items-center justify-content-end">
+                        <div class="col-xl-12 col-lg-12 col-md-12" style="margin-left: 20px;">
+                            <div class="menu-main d-flex align-items-center justify-content-center">
                                 <!-- Main-menu -->
                                 <div class="main-menu f-right d-none d-lg-block">
                                     <nav> 
@@ -57,7 +41,7 @@
                                             <li><a href="index.html">Ana Səhifə</a></li>
                                             <li><a href="about.html">Haqqımda</a></li>
                                             <li><a href="services.html">Servislər</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
+                                            <li><a href="contact.html">Əlaqə</a></li>
                                         </ul>
                                     </nav>
                                 </div>
@@ -81,7 +65,7 @@
                 <div class="row">
                     <div class="col-xl-12">
                         <div class="hero-cap text-center pt-50">
-                            <h2>Services</h2>
+                            <h2>Servislər</h2>
                         </div>
                     </div>
                 </div>
@@ -177,13 +161,12 @@
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="contact_text text-center">
-                            <div class="section_title text-center">
-                                <h3>Any time you can call us!</h3>
-                                <p>Because we know that even the best technology is only as good as the people behind it. 24/7 tech support.</p>
+                            <div class="section_title text-center" style="margin-bottom: 40px;">
+                                <h3>İstənilən vaxt mənə zəng edə bilərsiniz!</h3>
                             </div>
                             <div class="contact_btn d-flex align-items-center justify-content-center">
-                                <a href="contact.html" class="btn white-btn">Contact Us</a>
-                                <p>Or<a href="#"> +880 4664 216</a></p>
+                                <a href="contact.html" class="btn white-btn">Əlaqə</a>
+                                <p>Və ya<a href="tel:+9940552452028"> +994 055 245 20 28</a></p>
                             </div>
                         </div>
                     </div>
