--- a/index.html
+++ b/index.html
@@ -24,18 +24,6 @@
 </head>
 
 <body>
-    <!-- Preloader Start -->
-    <div id="preloader-active">
-        <div class="preloader d-flex align-items-center justify-content-center">
-            <div class="preloader-inner position-relative">
-                <div class="preloader-circle"></div>
-                <div class="preloader-img pere-text">
-                    <img src="assets/img/logo/logo.png" alt="">
-                </div>
-            </div>
-        </div>
-    </div>
-    <!-- Preloader Start -->
     <header>
         <!--? Header Start -->
         <div class="header-area header-transparent">
@@ -43,13 +31,8 @@
                 <div class="container-fluid">
                     <div class="row align-items-center">
                         <!-- Logo -->
-                        <div class="col-xl-2 col-lg-2 col-md-1">
-                            <div class="logo">
-                                <a href="index.html"><img src="assets/img/logo/logo.png" alt=""></a>
-                            </div>
-                        </div>
-                        <div class="col-xl-10 col-lg-10 col-md-10">
-                            <div class="menu-main d-flex align-items-center justify-content-end">
+                        <div class="col-xl-12 col-lg-12 col-md-12" style="margin-left: 20px;">
+                            <div class="menu-main d-flex align-items-center justify-content-center">
                                 <!-- Main-menu -->
                                 <div class="main-menu f-right d-none d-lg-block">
                                     <nav> 
@@ -57,10 +40,11 @@
                                             <li><a href="index.html">Ana Səhifə</a></li>
                                             <li><a href="about.html">Haqqımda</a></li>
                                             <li><a href="services.html">Servislər</a></li>
-                                            <li><a href="contact.html">Contact</a></li>
+                                            <li><a href="contact.html">Əlaqə</a></li>
                                         </ul>
                                     </nav>
                                 </div>
+
                             </div>
                         </div>   
                         <!-- Mobile Menu -->
@@ -91,7 +75,7 @@
                                     <span data-animation="fadeInUp" data-delay=".3s">Ev heyvanınıza qulluq etməyə kömək edirəm</span>
                                     <h1 data-animation="fadeInUp" data-delay=".3s">Mən sizin ev heyvanlarınıza qayğı göstərirəm.</h1>
                                     <p data-animation="fadeInUp" data-delay=".6s">Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna sectetur adipisci.</p>
-                                    <a href="#" class="hero-btn" data-animation="fadeInLeft" data-delay=".3s">Indi Əlaqə Saxla<i class="ti-arrow-right"></i> </a>
+                                    <a href="contact.html" class="hero-btn" data-animation="fadeInLeft" data-delay=".3s">Indi Əlaqə Saxla<i class="ti-arrow-right"></i> </a>
                                 </div>
                             </div>
                         </div>
@@ -106,8 +90,8 @@
                     <div class="cl-xl-7 col-lg-8 col-md-10">
                         <!-- Section Tittle -->
                         <div class="section-tittle text-center mb-70">
-                            <span>Our Professional Services</span>
-                            <h2>Best Pet Care Services</h2>
+                            <span>Peşəkar Xidmətlərim</span>
+                            <h2>Ən Yaxşı Heyvanlara Qulluq Xidmətləri</h2>
                         </div> 
                     </div>
                 </div>
@@ -118,7 +102,7 @@
                                 <span class="flaticon-animal-kingdom"></span>
                             </div>
                             <div class="services-cap">
-                                <h5><a href="#">Pet Boarding</a></h5>
+                                <h5><a href="#">Heyvanlar üçün internat</a></h5>
                                 <p>consectetur adipiscing elit, serfd dgo eiusmod tempor incididunt ut ore et dolore magna aliqua.</p>
                             </div>
                         </div>
@@ -129,7 +113,7 @@
                                 <span class="flaticon-animals"></span>
                             </div>
                             <div class="services-cap">
-                                <h5><a href="#">Pet Treatment</a></h5>
+                                <h5><a href="#">Heyvan müalicəsi</a></h5>
                                 <p>consectetur adipiscing elit, serfd dgo eiusmod tempor incididunt ut ore et dolore magna aliqua.</p>
                             </div>
                         </div>
@@ -140,7 +124,7 @@
                                 <span class="flaticon-animals-1"></span>
                             </div>
                             <div class="services-cap">
-                                <h5><a href="#">Vaccinations</a></h5>
+                                <h5><a href="#">Peyvəndlər</a></h5>
                                 <p>consectetur adipiscing elit, serfd dgo eiusmod tempor incididunt ut ore et dolore magna aliqua.</p>
                             </div>
                         </div>
@@ -179,12 +163,12 @@
                 <div class="right-caption">
                     <!-- Section Tittle -->
                     <div class="section-tittle mb-50">
-                        <h2>We are commited for<br> better service</h2>
+                        <h2>Mən daha yaxşı xidmət <br> üçün qərarlıyam</h2>
                     </div>
                     <div class="about-more">
                         <p class="pera-top">Mollit anim laborum duis adseu dolor iuyn voluptcate velit ess <br>cillum dolore egru lofrre dsu.</p>
                         <p class="mb-65 pera-bottom">Mollit anim laborum.Dvcuis aute serunt  iruxvfg dhjkolohr indd re voluptate velit esscillumlore eu quife nrulla parihatur. Excghcepteur sfwsignjnt occa cupidatat non aute iruxvfg dhjinulpadeserunt moll.</p>
-                        <a href="#" class="btn">Read More</a>
+                        <a href="#" class="btn">Daha çox oxu</a>
                     </div>
                 </div>
             </div>
@@ -197,8 +181,7 @@
                     <div class="cl-xl-7 col-lg-8 col-md-10">
                         <!-- Section Tittle -->
                         <div class="section-tittle text-center mb-70">
-                            <span>Our Recent Photos</span>
-                            <h2>Pets Photo Gallery</h2>
+                            <h2>Müalicədən Fotolar</h2>
                         </div> 
                     </div>
                 </div>
@@ -228,126 +211,6 @@
             </div>
         </div>
         <!-- Gallery Area End -->
-        <!--? Contact form Start -->
-        <div class="contact-form-main pb-top">
-            <div class="container">
-                <div class="row justify-content-md-end">
-                    <div class="col-xl-7 col-lg-7">
-                        <div class="form-wrapper">
-                            <!--Section Tittle  -->
-                            <div class="form-tittle">
-                                <div class="row ">
-                                    <div class="col-xl-12">
-                                        <div class="section-tittle section-tittle2 mb-70">
-                                            <h2>World's Leading Law Consultency Agency !</h2>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <!--End Section Tittle  -->
-                            <form id="contact-form" action="#" method="POST">
-                                <div class="row">
-                                    <div class="col-lg-6 col-md-6">
-                                        <div class="form-box user-icon mb-30">
-                                            <input type="text" name="name" placeholder="Name">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6">
-                                        <div class="form-box email-icon mb-30">
-                                            <input type="text" name="email" placeholder="Phone">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6 mb-30">
-                                        <div class="select-itms">
-                                            <select name="select" id="select2">
-                                                <option value="">Health Law</option>
-                                                <option value="">saiful islam</option>
-                                                <option value="">Arafath Miya</option>
-                                                <option value="">Shakil Miya</option>
-                                                <option value="">Tamim Sharker</option>
-                                            </select>
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-6 col-md-6">
-                                        <div class="form-box subject-icon mb-30">
-                                            <input type="Email" name="subject" placeholder="Email">
-                                        </div>
-                                    </div>
-                                    <div class="col-lg-12">
-                                        <div class="form-box message-icon mb-65">
-                                            <textarea name="message" id="message" placeholder="Message"></textarea>
-                                        </div>
-                                        <div class="submit-info">
-                                            <button class="btn submit-btn2" type="submit">Submit Now</button>
-                                        </div>
-                                    </div>
-                                </div>
-                                <!-- shape-dog -->
-                                <div class="shape-dog">
-                                    <img src="assets/img/gallery/shape1.png" alt="">
-                                </div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!-- contact left Img-->
-            <div class="from-left d-none d-lg-block">
-                <img src="assets/img/gallery/contact_form.png" alt="">
-            </div>
-        </div>
-        <!-- Contact form End -->
-        <!--? Team Start -->
-        <div class="team-area section-padding30">
-            <div class="container">
-                <div class="row justify-content-sm-center">
-                    <div class="cl-xl-7 col-lg-8 col-md-10">
-                        <!-- Section Tittle -->
-                        <div class="section-tittle text-center mb-70">
-                            <span>Our Professional members </span>
-                            <h2>Our Team Mambers</h2>
-                        </div> 
-                    </div>
-                </div>
-                <div class="row">
-                    <!-- single Tem -->
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
-                        <div class="single-team mb-30">
-                            <div class="team-img">
-                                <img src="assets/img/gallery/team1.png" alt="">
-                            </div>
-                            <div class="team-caption">
-                                <span>Mike Janathon</span>
-                                <h3><a href="#">Doctor</a></h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
-                        <div class="single-team mb-30">
-                            <div class="team-img">
-                                <img src="assets/img/gallery/team2.png" alt="">
-                            </div>
-                            <div class="team-caption">
-                                <span>Mike J Smith</span>
-                                <h3><a href="#">Doctor</a></h3>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6 col-sm-">
-                        <div class="single-team mb-30">
-                            <div class="team-img">
-                                <img src="assets/img/gallery/team3.png" alt="">
-                            </div>
-                            <div class="team-caption">
-                                <span>Pule W Smith</span>
-                                <h3><a href="#">Doctor</a></h3>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Team End -->
         <!--? Testimonial Start -->
         <div class="testimonial-area testimonial-padding section-bg" data-background="assets/img/gallery/section_bg03.png">
             <div class="container">
@@ -409,81 +272,18 @@
             </div>
         </div>
         <!-- Testimonial End -->
-        <!--? Blog start -->
-        <div class="home_blog-area section-padding30">
-            <div class="container">
-                <div class="row justify-content-sm-center">
-                    <div class="cl-xl-7 col-lg-8 col-md-10">
-                        <!-- Section Tittle -->
-                        <div class="section-tittle text-center mb-70">
-                            <span>Oure recent news</span>
-                            <h2>Our Recent Blog</h2>
-                        </div> 
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-blogs mb-30">
-                            <div class="blog-img">
-                                <img src="assets/img/gallery/blog1.png" alt="">
-                            </div>
-                            <div class="blogs-cap">
-                                <div class="date-info">
-                                    <span>Pet food</span>
-                                    <p>Nov 30, 2020</p>
-                                </div>
-                                <h4>Amazing Places To Visit In Summer</h4>
-                                <a href="blog_details.html" class="read-more1">Read more</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-blogs mb-30">
-                            <div class="blog-img">
-                                <img src="assets/img/gallery/blog2.png" alt="">
-                            </div>
-                            <div class="blogs-cap">
-                                <div class="date-info">
-                                    <span>Pet food</span>
-                                    <p>Nov 30, 2020</p>
-                                </div>
-                                <h4>Developing Creativithout Losing Visual</h4>
-                                <a href="blog_details.html" class="read-more1">Read more</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-xl-4 col-lg-4 col-md-6">
-                        <div class="single-blogs mb-30">
-                            <div class="blog-img">
-                                <img src="assets/img/gallery/blog3.png" alt="">
-                            </div>
-                            <div class="blogs-cap">
-                                <div class="date-info">
-                                    <span>Pet food</span>
-                                    <p>Nov 30, 2020</p>
-                                </div>
-                                <h4>Winter Photography Tips from Glenn</h4>
-                                <a href="blog_details.html" class="read-more1">Read more</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- Blog End -->
         <!--? contact-animal-owner Start -->
         <div class="contact-animal-owner section-bg" data-background="assets/img/gallery/section_bg04.png">
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-lg-8">
                         <div class="contact_text text-center">
-                            <div class="section_title text-center">
-                                <h3>Any time you can call us!</h3>
-                                <p>Because we know that even the best technology is only as good as the people behind it. 24/7 tech support.</p>
+                            <div class="section_title text-center" style="margin-bottom: 40px;">
+                                <h3>İstənilən vaxt mənə zəng edə bilərsiniz!</h3>
                             </div>
                             <div class="contact_btn d-flex align-items-center justify-content-center">
-                                <a href="contact.html" class="btn white-btn">Contact Us</a>
-                                <p>Or<a href="#"> +880 4664 216</a></p>
+                                <a href="contact.html" class="btn white-btn">Əlaqə</a>
+                                <p>Və ya<a href="tel:+9940552452028"> +994 055 245 20 28</a></p>
                             </div>
                         </div>
                     </div>
